add:　todolist機能の実装

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
   <meta property="og:description" content="A simple HTML5 Template for new projects.">
   <meta property="og:image" content="image.png">
 
-  <link rel="icon" href="/favicon.ico">
-  <link rel="icon" href="/favicon.svg" type="image/svg+xml">
-  <link rel="apple-touch-icon" href="/apple-touch-icon.png">
+  <!-- <link rel="icon" href="/favicon.ico">
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml"> -->
+  <!-- <link rel="apple-touch-icon" href="/apple-touch-icon.png"> -->
 
-  <link rel="stylesheet" href="css/reset.css?v=1.0">
+  <!-- <link rel="stylesheet" href="css/reset.css?v=1.0"> -->
   <link rel="stylesheet" href="css/style.css?v=1.0">
 
 </head>
@@ -28,6 +28,6 @@
   <div id="app"></div>
 
   <!-- your content here... -->
-  <script defer src="dist/app.js"></script>
+  <script defer src="dist/main.js"></script>
 </body>
 </html>
