--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,6 @@
   <div id="app"></div>
 
   <!-- your content here... -->
-  <script defer src="dist/main.js"></script>
+  <script defer src="./main.js"></script>
 </body>
 </html>
